<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>575</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>800</width>
    <height>575</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>800</width>
    <height>575</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Cost-Benefit Analysis Tool</string>
  </property>
  <property name="styleSheet">
   <string notr="true">background-color: </string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>110</y>
      <width>87</width>
      <height>47</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="inputFileButtonVLayout">
     <item alignment="Qt::AlignTop">
      <widget class="QPushButton" name="inputFileButton">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="maximumSize">
        <size>
         <width>200</width>
         <height>23</height>
        </size>
       </property>
       <property name="font">
        <font>
         <pointsize>7</pointsize>
        </font>
       </property>
       <property name="layoutDirection">
        <enum>Qt::LeftToRight</enum>
       </property>
       <property name="text">
        <string>Select Input File</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget_2">
    <property name="geometry">
     <rect>
      <x>120</x>
      <y>110</y>
      <width>661</width>
      <height>41</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="fileNameLabelVLayout">
     <item alignment="Qt::AlignTop">
      <widget class="QLabel" name="fileNameLabel">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
        </font>
       </property>
       <property name="text">
        <string/>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget_3">
    <property name="geometry">
     <rect>
      <x>300</x>
      <y>470</y>
      <width>251</width>
      <height>81</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="runScanButtonVLayout">
     <item>
      <widget class="QPushButton" name="runScanButton">
       <property name="minimumSize">
        <size>
         <width>0</width>
         <height>0</height>
        </size>
       </property>
       <property name="font">
        <font>
         <weight>75</weight>
         <italic>true</italic>
         <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
        <string notr="true">background-color:rgb(85, 255, 0)</string>
       </property>
       <property name="text">
        <string>Run Scan</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QWidget" name="horizontalLayoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>10</y>
      <width>761</width>
      <height>51</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="programNameHLayout">
     <item>
      <widget class="QLabel" name="programNameLabel">
       <property name="font">
        <font>
         <pointsize>15</pointsize>
         <weight>75</weight>
         <italic>true</italic>
         <bold>true</bold>
         <underline>false</underline>
        </font>
       </property>
       <property name="styleSheet">
        <string notr="true"/>
       </property>
       <property name="text">
        <string>Cost-Benefit Analysis Tool</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="Line" name="topScreenBorderLine">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>50</y>
      <width>801</width>
      <height>16</height>
     </rect>
    </property>
    <property name="orientation">
     <enum>Qt::Horizontal</enum>
    </property>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget_4">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>200</y>
      <width>174</width>
      <height>81</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="businessSizeButtonVLayout">
     <item>
      <widget class="QRadioButton" name="smallBusinessRadioButton">
       <property name="text">
        <string>Small (&lt; 10)</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QRadioButton" name="mediumBusinessRadioButton">
       <property name="text">
        <string>Medium (10-100)</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QRadioButton" name="largeBusinessRadioButton">
       <property name="text">
        <string>Large (&gt; 100 )</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget_5">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>70</y>
      <width>761</width>
      <height>31</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="inputFilePermanentVLayout">
     <item>
      <widget class="QLabel" name="inputFilePermanentLabel">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
       </property>
       <property name="text">
        <string>Input File:</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget_6">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>160</y>
      <width>761</width>
      <height>31</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="businessSizeLabelVLayout">
     <item>
      <widget class="QLabel" name="businessSizeLabel">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
       </property>
       <property name="text">
        <string>Business Size (in number of nodes):</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget_7">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>290</y>
      <width>761</width>
      <height>31</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="businessTypeLabelVLayout">
     <item>
      <widget class="QLabel" name="businessTypeLabel">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
         <weight>75</weight>
         <bold>true</bold>
        </font>
       </property>
       <property name="text">
        <string>Business Type:</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget_8">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>330</y>
      <width>133</width>
      <height>81</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="businessTypeButtonVLayout">
     <item>
      <widget class="QRadioButton" name="homeSmallOfficeRadioButton">
       <property name="text">
        <string>Home/ Small Office</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QRadioButton" name="corporateBusinessRadioButton">
       <property name="text">
        <string>Corporate</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QRadioButton" name="federalBusinessRadioButton">
       <property name="text">
        <string>Federal/Govermental</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFileTab">
    <property name="title">
     <string>File</string>
    </property>
    <widget class="QMenu" name="menuExport">
     <property name="title">
      <string>Export</string>
     </property>
     <addaction name="actionXML_3"/>
     <addaction name="actionNessus"/>
    </widget>
    <addaction name="menuExport"/>
   </widget>
   <widget class="QMenu" name="menuAboutTab">
    <property name="title">
     <string>About</string>
    </property>
    <addaction name="aboutProgramTabPress"/>
   </widget>
   <addaction name="menuFileTab"/>
   <addaction name="menuAboutTab"/>
  </widget>
  <action name="actionXML">
   <property name="text">
    <string>XML</string>
   </property>
  </action>
  <action name="actionJSON">
   <property name="text">
    <string>JSON</string>
   </property>
  </action>
  <action name="actionXML_2">
   <property name="text">
    <string>XML</string>
   </property>
  </action>
  <action name="actionJSON_2">
   <property name="text">
    <string>JSON</string>
   </property>
  </action>
  <action name="actionAbout_Program">
   <property name="text">
    <string>About Program</string>
   </property>
  </action>
  <action name="aboutProgramTabPress">
   <property name="text">
    <string>About Program</string>
   </property>
  </action>
  <action name="actionXML_3">
   <property name="text">
    <string>XML</string>
   </property>
  </action>
  <action name="actionNessus">
   <property name="text">
    <string>Nessus</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
